[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.10",
    "passlib>=1.7.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
